--- a/style/_page2.scss
+++ b/style/_page2.scss
@@ -31,7 +31,7 @@
     font-weight: 600;
     font-size: 55px;
     position: relative;
-    z-index: 10
+    z-index: 1
 }
 .textPage .ventures {
     font-family: "Times New Roman", serif;
