--- a/style/style.css
+++ b/style/style.css
@@ -331,7 +331,7 @@ button {
   top: 25px;
   right: 25px;
   position: fixed;
-  z-index: 2;
+  z-index: 4;
   pointer-events: none;
 }
 
@@ -351,7 +351,7 @@ input {
   position: fixed;
   top: 25px;
   right: 23px;
-  z-index: 1;
+  z-index: 3;
   width: 35px;
   height: 35px;
   opacity: 0;
@@ -388,7 +388,7 @@ nav {
   left: 0;
   background-color: whitesmoke;
   opacity: 0;
-  transition: all 0, 7s cubic-bezier(0.075, 0.82, 0.165, 1);
+  transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
   width: 100vw;
   height: 100vh;
   visibility: hidden;
@@ -398,6 +398,7 @@ input:checked + .menu nav {
   visibility: visible;
   display: block;
   opacity: 70%;
+  z-index: 2;
 }
 
 ul {
@@ -543,7 +544,7 @@ li:hover {
   font-weight: 600;
   font-size: 55px;
   position: relative;
-  z-index: 10;
+  z-index: 1;
 }
 
 .textPage .ventures {
